reduce dyn mem alloc in the core for optimization (around 20%)

--- a/src/standalone/Makefile
+++ b/src/standalone/Makefile
@@ -5,22 +5,22 @@ CPP=g++
 INC=$(INTEL_MKL)/include/
 LIB=$(INTEL_MKL)/lib/intel64/
 LIB2=$(INTEL_COMP)/lib/intel64/
-BUILD=../build
+BUILD=.
 
-stress-test: stress-test-main.o solb.o
-	$(CPP) -o $(BUILD)/stress-test \
-		stress-test/stress-test-main.o \
-		core/solb.o \
+standalone: standalone.o solb.o
+	$(CPP) -o $(BUILD)/solb \
+		standalone.o \
+		../core/solb.o \
 		-L$(LIB) -L$(LIB2) \
 		-lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -liomp5 -lpthread -lm
 
-solb.o: core/solb.cpp
-	(cd core; \
+solb.o: ../core/solb.cpp
+	(cd ../core; \
 		$(CPP) -Wall -I$(INC) -c solb.cpp)
 
-stress-test-main.o: stress-test/stress-test-main.cpp
-	(cd stress-test; \
-		$(CPP) -Wall -fopenmp -I$(INC) -c stress-test-main.cpp)
+standalone.o: solb-app.cpp
+	$(CPP) -o standalone.o \
+		-Wall -ggdb -fopenmp -I$(INC) -c solb-single.cpp
 
 clean:
 	rm -f $(BUILD)/*
