added command line interface; added simple tool for generating grid probes in python

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,12 +7,23 @@ LIB=$(INTEL_MKL)/lib/intel64/
 LIB2=$(INTEL_COMP)/lib/intel64/
 BUILD=../build
 
+app: solb-app.o solb.o
+	$(CPP) -o $(BUILD)/solb \
+		app/solb-app.o \
+		core/solb.o \
+		-L$(LIB) -L$(LIB2) \
+		-lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -liomp5 -lpthread -lm
+
 stress-test: stress-test-main.o solb.o
 	$(CPP) -o $(BUILD)/stress-test \
 		stress-test/stress-test-main.o \
 		core/solb.o \
 		-L$(LIB) -L$(LIB2) \
 		-lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -liomp5 -lpthread -lm
+
+solb-app.o: app/solb-app.cpp
+	(cd app; \
+		$(CPP) -Wall -fopenmp -I$(INC) -c solb-app.cpp)
 
 solb.o: core/solb.cpp
 	(cd core; \
